# HermesContext

./: .env.example  .gitignore  .kilocode.json  ARCHITECTURE.md  DEPLOY_GUIDE.md  Dockerfile  MCP_SETUP.md  README.md  config.py  database.py  docker-compose.dev.yml  docker-compose.yml  engine.py  health_check.sh  ingest_file.py  pyproject.toml  server.py  smoke_test.py  warmup_models.py
.claude/: settings.local.json
.claude/commands/: hermes-context.md  mcp-inspector.md
.kilocode/skills/hermes-context/: SKILL.md
.kilocode/skills/hermes-deploy/: SKILL.md
scripts/: __init__.py  check_tools.py  health_check.sh  init_db.py  mcp-inspector.sh  test_connection.py  test_get_document.py  test_get_stats.py  test_ingest_document.py  test_list_documents.py  test_search.py  test_stats.py  warmup_models.py
src/: __init__.py  cli.py  database.py  embeddings.py  engine.py  server.py  utils.py
tests/: conftest.py  test_chunking.py  test_config.py  test_database.py  test_pipeline.py
