[project]
name = "hermescontext"
version = "1.0.0"
description = "RAG MCP Server — Oracle Always Free, BGE-M3, 100% self-hosted"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0.0",
    "oracledb>=2.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hermes-mcp = "src.server:main"
hermes-cli = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Oracle DB and Redis",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"